fix: resolve all build and CI warnings
- Replace deprecated new URL(String) with URI.create().toURL()
- Replace deprecated JsonParser instance with static parseString()
- Fix mvn package install → mvn install to avoid artifact overwrite warning
- Add --add-modules jdk.incubator.vector to suppress Lucene warning in cve-check